--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "g-xsk-cli",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "bin": {
     "gxc": "/bin/index.js"
@@ -12,5 +12,9 @@
     "commander": "^5.1.0",
     "inquirer": "^7.1.0",
     "ora": "^4.0.4"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/xiaoshengkai/github-xsk-cli"
   }
 }
