接入 github接口以及交互 设置缓存文件

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "g-xsk-cli",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "bin": {
     "gxc": "/bin/index.js"
@@ -14,7 +14,10 @@
     "ora": "^4.0.4"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/xiaoshengkai/github-xsk-cli"
+    "type": "git",
+    "url": "https://github.com/xiaoshengkai/github-xsk-cli"
+  },
+  "devDependencies": {
+    "axios": "^0.19.2"
   }
 }
