--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "g-xsk-cli",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "",
   "bin": {
-    "gxc": "/bin/index.js"
+    "gxc": "./bin/index.js"
   },
   "author": "xiaoshengkai",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "chalk": "^4.0.0",
     "commander": "^5.1.0",
     "inquirer": "^7.1.0",
@@ -16,8 +17,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/xiaoshengkai/github-xsk-cli"
-  },
-  "devDependencies": {
-    "axios": "^0.19.2"
   }
 }
